# LSTM_CUDA

./: CMakeLists.txt  README.md
Keras/: LSTM-keras.ipynb
Src/: CMakeLists.txt  lstm.h  test_util.cu  test_util.h
Src/lstm/: CMakeLists.txt  basicLayer.cu  basicLayer.h  basicNeuron.cu  basicNeuron.h  dataLoader.cu  dataLoader.h  denseLayer.cu  denseLayer.h  embedLayer.cu  embedLayer.h  forgetGate.cu  forgetGate.h  gateLayer.cu  gateLayer.h  inputGate.cu  inputGate.h  lstm.cu  lstm.h  moduleGate.cu  moduleGate.h  outputGate.cu  outputGate.h  sentimentAnalyzer.cpp  util.cu  util.h
Src/test/: CMakeLists.txt  test.cu  test_layer.cu  test_layer.h  test_main.cu  test_util.cu  test_util.h
datasets/: sentiment.txt  text.txt
